# CrazyCraft

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini  null.d
.devcontainer/: devcontainer.json
CPM_modules/: Findimgui.cmake  Findmagnum-integration.cmake  Findrobinhoodhashing.cmake
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/FastNoise2/: Makefile  cmake_install.cmake
lib/FastNoise2/NoiseTool/: Makefile  cmake_install.cmake  resource_NoiseTool_RESOURCES.cpp  resources.conf
lib/FastNoise2/src/: Makefile  cmake_install.cmake
lib/glad/: Makefile  cmake_install.cmake
lib/glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
lib/glfw/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  intro_guide.html  main_8dox.html  (+19 more)
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
lib/glfw/src/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  allocator  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  tearing  threads  timeout  title  triangle-vulkan  window
res/shaders/: Cinvert.shader
src/: important.h  main.cpp
src/eog/: Debug.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/game/: game.h
src/game/world/: Chunk.cpp  Chunk.h  Voxeldata.h  World.cpp  World.h  block.cpp  block.h
src/input/: Input.cpp  Input.h
src/opengl/: camera.h  debug.h  shader.h  texture.h  window.h
